Dll katmanında manager ve model klasörleri oluşturuldu.Düzeltmeler yapıldı.

--- a/RecordStore/RecordStore.BLL/RecordStore.BLL.csproj
+++ b/RecordStore/RecordStore.BLL/RecordStore.BLL.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RecordStore.DAL\RecordStore.DAL.csproj" />
+  </ItemGroup>
+
 </Project>
